src/main/java/com/example/crm/validates/SellerValidate.java
package com.example.crm.validates;

import com.example.crm.payload.seller.SellerCreateRequest;
import com.example.crm.payload.seller.SellerUpdateRequest;
import org.springframework.stereotype.Component;

@Component
public class SellerValidate {
    public void validate(SellerCreateRequest sellerCreateRequest) {
    }

    public void validate(SellerUpdateRequest sellerUpdateRequest) {
    }
}
