src/main/java/com/example/crm/error/exception/AlreadyExsistException.java
package com.example.crm.error.exception;

public class AlreadyExsistException extends CrmException{
    public AlreadyExsistException(String message) {
        super(message);
    }
}
